--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.10.1",
+    "@tanstack/react-query": "^4.24.10",
+    "@trpc/client": "^10.12.0",
+    "@trpc/next": "^10.12.0",
+    "@trpc/react-query": "^10.12.0",
+    "@trpc/server": "^10.12.0",
     "class-variance-authority": "0.4.0",
     "clsx": "^1.2.1",
     "lucide-react": "^0.115.0",
     "next": "13.2.1",
+    "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.10.0",
-    "tailwindcss-animate": "^1.0.5"
+    "tailwindcss-animate": "^1.0.5",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
@@ -31,6 +40,7 @@
     "eslint-plugin-tailwindcss": "^3.9.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
+    "prisma": "^4.10.1",
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.5"
   }
