--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.10.1",
+    "@prisma/client": "^4.11.0",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.3",
     "@tanstack/react-query": "^4.24.10",
@@ -27,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
+    "superjson": "^1.12.2",
     "tailwind-merge": "^1.10.0",
     "tailwindcss-animate": "^1.0.5",
     "zod": "^3.20.6"
@@ -44,7 +46,7 @@
     "eslint-plugin-tailwindcss": "^3.9.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
-    "prisma": "^4.10.1",
+    "prisma": "^4.11.0",
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.5"
   }
