--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^4.11.0",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.3",
+    "@radix-ui/react-select": "^1.2.0",
     "@tanstack/react-query": "^4.24.10",
     "@trpc/client": "^10.12.0",
     "@trpc/next": "^10.12.0",
