--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@trpc/server": "^10.12.0",
     "class-variance-authority": "0.4.0",
     "clsx": "^1.2.1",
+    "framer-motion": "^10.0.2",
     "lucide-react": "^0.115.0",
     "next": "13.2.1",
     "next-auth": "^4.19.2",
@@ -30,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
+    "sonner": "^0.1.6",
     "superjson": "^1.12.2",
     "tailwind-merge": "^1.10.0",
     "tailwindcss-animate": "^1.0.5",
@@ -50,6 +52,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prisma": "^4.11.0",
+    "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.5"
   }
