--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@trpc/next": "^10.17.0",
     "@trpc/react-query": "^10.17.0",
     "@trpc/server": "^10.17.0",
+    "cal-sans": "^1.0.1",
     "class-variance-authority": "0.4.0",
     "clsx": "^1.2.1",
     "framer-motion": "^10.6.1",
