--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,16 @@
   "extends": [
     "next/core-web-vitals",
     "prettier",
-    "plugin:tailwindcss/recommended"
+    "plugin:tailwindcss/recommended",
+    "plugin:react/recommended",
+    "plugin:react/jsx-runtime"
   ],
   "plugins": ["tailwindcss"],
   "rules": {
     "@next/next/no-html-link-for-pages": "off",
-    "react/jsx-key": "off",
-    "tailwindcss/no-custom-classname": "off"
+    "tailwindcss/no-custom-classname": "off",
+    "react/prop-types": "off",
+    "react/no-unknown-property": "off"
   },
   "settings": {
     "tailwindcss": {
