--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,3 @@
 {
-  "$schema": "https://json.schemastore.org/eslintrc",
-  "root": true,
-  "extends": [
-    "next/core-web-vitals",
-    "prettier",
-    "plugin:tailwindcss/recommended",
-    "plugin:react/recommended",
-    "plugin:react/jsx-runtime"
-  ],
-  "plugins": ["tailwindcss"],
-  "rules": {
-    "@next/next/no-html-link-for-pages": "off",
-    "tailwindcss/no-custom-classname": "off",
-    "react/prop-types": "off",
-    "react/no-unknown-property": "off"
-  },
-  "settings": {
-    "tailwindcss": {
-      "callees": ["cn"]
-    }
-  }
+  "extends": "next/core-web-vitals"
 }
