--- a/package.json
+++ b/package.json
@@ -1,61 +1,25 @@
 {
-  "name": "bookmarks",
+  "name": "bookmarks-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@microlink/mql": "^0.10.32",
-    "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.11.0",
-    "@radix-ui/react-context-menu": "^2.1.3",
-    "@radix-ui/react-dialog": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.4",
-    "@radix-ui/react-select": "^1.2.1",
-    "@tanstack/react-query": "^4.28.0",
-    "@trpc/client": "^10.17.0",
-    "@trpc/next": "^10.17.0",
-    "@trpc/react-query": "^10.17.0",
-    "@trpc/server": "^10.17.0",
-    "algoliasearch": "^4.16.0",
-    "class-variance-authority": "0.4.0",
-    "clsx": "^1.2.1",
-    "framer-motion": "^10.6.1",
-    "lucide-react": "^0.127.0",
-    "next": "13.2.4",
-    "next-auth": "^4.20.1",
-    "next-themes": "^0.2.1",
+    "@types/node": "18.16.3",
+    "@types/react": "18.2.5",
+    "@types/react-dom": "18.2.3",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.39.0",
+    "eslint-config-next": "13.4.0",
+    "next": "13.4.0",
+    "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.7",
-    "sonner": "^0.3.0",
-    "superjson": "^1.12.2",
-    "tailwind-merge": "^1.10.0",
-    "tailwindcss-animate": "^1.0.5",
-    "zod": "^3.21.4",
-    "zustand": "^4.3.6"
-  },
-  "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
-    "@types/node": "18.15.3",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "autoprefixer": "^10.4.14",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-tailwindcss": "^3.10.1",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.5",
-    "prisma": "^4.11.0",
-    "tailwind-scrollbar": "^3.0.0",
-    "tailwindcss": "^3.2.7",
-    "typescript": "4.9.5"
+    "tailwindcss": "3.3.2",
+    "typescript": "5.0.4"
   }
 }
