--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "clsx": "^1.2.1",
+    "@clerk/nextjs": "^4.17.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@supabase/supabase-js": "^2.21.0",
+    "kysely": "^0.24.2",
     "next": "13.4.1",
+    "next-themes": "^0.2.1",
+    "pg": "^8.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -18,13 +23,17 @@
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.3",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.4.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.11.0",
+    "lucide-react": "^0.214.0",
     "postcss": "8.4.23",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.5",
     "typescript": "5.0.4"
   }
 }
