--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "private": true,
+  "packageManager": "pnpm@8.4.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typegen": "npx supabase gen types typescript --project-id uatsejjjuxhrwpghpbzj --schema public > types/supabase.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.17.1",
+    "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-slot": "^1.0.1",
     "@supabase/supabase-js": "^2.21.0",
     "kysely": "^0.24.2",
@@ -16,7 +20,8 @@
     "next-themes": "^0.2.1",
     "pg": "^8.10.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
@@ -32,6 +37,7 @@
     "eslint-plugin-tailwindcss": "^3.11.0",
     "lucide-react": "^0.214.0",
     "postcss": "8.4.23",
+    "supabase": "^1.57.2",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.5",
