--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
     "typegen": "npx supabase gen types typescript --project-id uatsejjjuxhrwpghpbzj --schema public > types/supabase.ts"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.17.3",
+    "@next-auth/prisma-adapter": "^1.0.6",
+    "@prisma/client": "^4.14.0",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-slot": "^1.0.1",
-    "@supabase/supabase-js": "^2.21.0",
-    "kysely": "^0.24.2",
-    "next": "13.4.1",
+    "next": "13.4.2",
+    "next-auth": "^4.22.1",
     "next-themes": "^0.2.1",
-    "pg": "^8.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9"
@@ -32,13 +31,13 @@
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "eslint": "8.40.0",
-    "eslint-config-next": "13.4.1",
+    "eslint-config-next": "13.4.2",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.11.0",
     "lucide-react": "^0.216.0",
     "postcss": "8.4.23",
     "prettier": "^2.8.8",
-    "supabase": "^1.57.7",
+    "prisma": "^4.14.0",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.5",
