--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "packageManager": "yarn@1.22.19",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint",
-    "typegen": "npx supabase gen types typescript --project-id uatsejjjuxhrwpghpbzj --schema public > types/supabase.ts"
+    "lint": "next lint"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
