--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-slot": "^1.0.1",
+    "@vercel/analytics": "^1.0.1",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
     "next-themes": "^0.2.1",
