--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+  "name": "bookmarks-test",
+  "version": "0.1.0",
   "private": true,
-  "packageManager": "yarn@1.22.19",
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
@@ -10,39 +11,21 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.0",
-    "@radix-ui/react-dialog": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.4",
-    "@radix-ui/react-select": "^1.2.1",
-    "@radix-ui/react-slot": "^1.0.1",
-    "@vercel/analytics": "^1.0.1",
-    "next": "13.4.2",
-    "next-auth": "^4.22.1",
-    "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.9"
-  },
-  "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
-    "@typescript-eslint/parser": "^5.59.5",
     "autoprefixer": "10.4.14",
-    "class-variance-authority": "^0.6.0",
-    "clsx": "^1.2.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-tailwindcss": "^3.11.0",
-    "lucide-react": "^0.216.0",
+    "next": "13.4.2",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.23",
-    "prettier": "^2.8.8",
-    "prisma": "^4.14.0",
-    "tailwind-merge": "^1.12.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "tailwindcss-animate": "^1.0.5",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "prisma": "^4.14.0"
   }
 }
