--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
+    "eslint": "^8.40.0",
+    "eslint-config-next": "^13.4.2",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
@@ -26,6 +26,16 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "prisma": "^4.14.0"
+    "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@typescript-eslint/parser": "^5.59.5",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-tailwindcss": "^3.11.0",
+    "prettier": "^2.8.8",
+    "prisma": "^4.14.0",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss-animate": "^1.0.5"
   }
 }
