--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-slot": "^1.0.1",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.2",
+    "lucide-react": "^0.216.0",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
