--- a/package.json
+++ b/package.json
@@ -9,40 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@microlink/mql": "^0.10.33",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^4.15.0",
+    "@prisma/client": "^5.0.0",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.8",
-    "@types/react-dom": "18.2.4",
+    "@types/node": "20.4.1",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
-    "eslint": "^8.42.0",
-    "eslint-config-next": "^13.4.4",
-    "lucide-react": "^0.233.0",
-    "next": "^13.4.5-canary.8",
+    "eslint": "^8.44.0",
+    "eslint-config-next": "^13.4.9",
+    "lucide-react": "^0.259.0",
+    "next": "^13.4.9",
     "next-auth": "^4.22.1",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.24",
+    "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.6"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
-    "@typescript-eslint/parser": "^5.59.8",
-    "class-variance-authority": "^0.6.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-tailwindcss": "^3.12.1",
-    "prettier": "^2.8.8",
-    "prisma": "^4.15.0",
-    "tailwind-merge": "^1.13.0",
-    "tailwindcss-animate": "^1.0.5"
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "prettier": "^3.0.0",
+    "prisma": "^5.0.0",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6"
   }
 }
