--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prisma": "^5.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-wrap-balancer": "^1.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
