--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "autoprefixer": "10.4.14",
     "eslint": "^8.45.0",
     "eslint-config-next": "^13.4.10",
-    "lucide-react": "^0.260.0",
+    "lucide-react": "^0.261.0",
     "next": "^13.4.10",
-    "next-auth": "^4.22.1",
+    "next-auth": "4.22.1",
     "next-themes": "^0.2.1",
     "postcss": "8.4.26",
     "prisma": "^5.0.0",
@@ -38,8 +38,8 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "class-variance-authority": "^0.6.1",
+    "@typescript-eslint/parser": "^6.1.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
