modify ts rules to be more strict about unused code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,9 @@
         "name": "next"
       }
     ],
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "alwaysStrict": true,
     "paths": {
       "@/*": ["./*"]
     }
