enforce importing types with a type annotation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
         "name": "next"
       }
     ],
+    "verbatimModuleSyntax": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "alwaysStrict": true,
