--- a/package.json
+++ b/package.json
@@ -20,29 +20,25 @@
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@types/node": "20.4.7",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
     "cmdk": "^0.2.0",
-    "eslint": "^8.46.0",
-    "eslint-config-next": "^13.4.12",
     "lucide-react": "^0.263.1",
     "next": "^13.4.12",
     "next-auth": "4.22.3",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.27",
     "prisma": "^5.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-wrap-balancer": "^1.0.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
+    "eslint": "^8.46.0",
+    "eslint-config-next": "^13.4.12",
+    "@types/node": "^20.4.7",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
     "@typescript-eslint/parser": "^6.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -50,7 +46,11 @@
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "prettier": "^3.0.1",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.6"
+    "tailwindcss-animate": "^1.0.6",
+    "typescript": "^5.1.6"
   }
 }
