--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "^13.4.12",
     "next-auth": "4.22.4",
     "next-themes": "^0.2.1",
+    "nza": "^0.1.10",
     "prisma": "^5.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,22 +35,22 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
-    "eslint": "^8.46.0",
-    "eslint-config-next": "^13.4.12",
     "@types/node": "^20.4.8",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/parser": "^6.2.1",
+    "autoprefixer": "^10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "eslint": "^8.46.0",
+    "eslint-config-next": "^13.4.12",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-tailwindcss": "^3.13.0",
-    "prettier": "^3.0.1",
-    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
+    "prettier": "^3.0.1",
     "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "^5.1.6"
   }
