--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "cmdk": "^0.2.0",
-    "lucide-react": "^0.264.0",
-    "next": "^13.4.12",
-    "next-auth": "4.22.4",
+    "lucide-react": "0.263.1",
+    "next": "^13.4.13",
+    "next-auth": "4.22.5",
     "next-themes": "^0.2.1",
     "nza": "^0.1.11",
     "prisma": "^5.1.1",
@@ -35,15 +35,15 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
-    "@types/node": "^20.4.8",
-    "@types/react": "^18.2.18",
+    "@types/node": "^20.4.9",
+    "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/parser": "^6.2.1",
+    "@typescript-eslint/parser": "^6.3.0",
     "autoprefixer": "^10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "^8.46.0",
-    "eslint-config-next": "^13.4.12",
+    "eslint-config-next": "^13.4.13",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-tailwindcss": "^3.13.0",
