--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "cmdk": "^0.2.0",
     "lucide-react": "0.263.1",
-    "next": "^13.4.13",
-    "next-auth": "4.22.5",
+    "next": "^13.4.14-canary.2",
+    "next-auth": "4.23.0",
     "next-themes": "^0.2.1",
     "nza": "^0.1.11",
     "prisma": "^5.1.1",
@@ -42,7 +42,7 @@
     "autoprefixer": "^10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "eslint": "^8.46.0",
+    "eslint": "^8.47.0",
     "eslint-config-next": "^13.4.13",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.1",
