--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "cmdk": "^0.2.0",
     "lucide-react": "0.263.1",
-    "next": "^13.4.14-canary.2",
+    "next": "^13.4.13",
     "next-auth": "4.23.0",
     "next-themes": "^0.2.1",
     "nza": "^0.1.11",
