move code to src/

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "noUnusedParameters": true,
     "alwaysStrict": true,
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
