--- a/.github/workflows/run-migrations.yml
+++ b/.github/workflows/run-migrations.yml
@@ -1,9 +1,6 @@
-name: Build
+name: Run migrations
 on:
   push:
-    branches:
-      - main
-  pull_request:
     branches:
       - main
 
@@ -17,8 +14,6 @@ jobs:
         uses: actions/setup-node@v3
       - name: Install dependencies
         run: npm install
-      - name: Build the source
-        run: npm run build
       - name: Apply all pending migrations to the database
         run: npx prisma migrate deploy
         env:
