--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "eslint:autofix": "eslint --fix --ext .js,.jsx,.ts,.tsx ."
+    "eslint:autofix": "eslint --fix --ext .js,.jsx,.ts,.tsx .",
+    "prettier": "prettier --check \"**/*.{css,js,json,jsx,ts,tsx}\" --cache",
+    "prettier:fix": "prettier --write \"**/*.{css,js,json,jsx,ts,tsx}\" --cache"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
@@ -35,7 +37,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
+    "@ianvs/prettier-plugin-sort-imports": "^3",
     "@types/node": "^20.5.1",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
@@ -49,7 +51,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "postcss": "^8.4.28",
-    "prettier": "^3.0.2",
+    "prettier": "^2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.6",
