--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,4 +1,4 @@
-name: Quality Check
+name: Quality
 
 on:
   push:
@@ -19,17 +19,47 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: Install yarn
-        shell: bash
-        run: npm i -g yarn
-
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
+      - name: Install
+        uses: ./tooling/github-actions/install
 
       - name: Run Prettier
-        run: yarn prettier
+        run: yarn format
+
+  eslint:
+    name: ESLint
+    timeout-minutes: 15
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup and install
+        uses: ./tooling/github-actions/install
+
+      - name: Lint
+        run: yarn lint
+
+  typecheck:
+    name: TypeCheck
+    timeout-minutes: 15
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install
+        uses: ./tooling/github-actions/install
+
+      - name: Cache TypeScript TSBuild Info Files
+        id: cache-typescript-tsbuildinfo
+        uses: actions/cache@v3
+        with:
+          path: node_modules/.cache/*-tsbuildinfo.json
+          # We use the commit hash as the key to always update the cache as a
+          # workaround to this issue:
+          # https://github.com/actions/cache/issues/106
+          key: ${{ runner.os }}-cache-typescript-tsbuildinfo-${{ github.sha }}
+          restore-keys: ${{ runner.os }}-cache-typescript-tsbuildinfo-
+
+      - name: Run TypeScript type check
+        run: yarn typecheck
