--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "@radix-ui/react-context-menu": "^2.1.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "cmdk": "^0.2.0",
     "lucide-react": "0.279.0",
-    "next": "^13.5.2",
+    "next": "^13.5.3",
     "next-auth": "4.23.1",
     "next-themes": "^0.2.1",
     "nza": "^0.1.14",
@@ -53,7 +54,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "postcss": "^8.4.30",
-    "prettier": "^2",
+    "prettier": "^2.8.8",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
