--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/auth-helpers-nextjs": "^0.8.1",
+    "@supabase/supabase-js": "^2.37.0",
     "cmdk": "^0.2.0",
+    "drizzle-orm": "^0.28.6",
     "lucide-react": "0.279.0",
     "next": "^13.5.3",
     "next-themes": "^0.2.1",
     "nza": "^0.1.14",
+    "postgres": "^3.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
@@ -46,6 +50,7 @@
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "drizzle-kit": "^0.19.13",
     "eslint": "^8.50.0",
     "eslint-config-next": "^13.5.2",
     "eslint-config-prettier": "^9.0.0",
