--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -23,7 +23,7 @@ jobs:
         uses: ./tooling/github-actions/install
 
       - name: Run Prettier
-        run: yarn format
+        run: pnpm format
 
   eslint:
     name: ESLint
@@ -37,7 +37,7 @@ jobs:
         uses: ./tooling/github-actions/install
 
       - name: Lint
-        run: yarn lint
+        run: pnpm lint
 
   typecheck:
     name: TypeCheck
@@ -62,4 +62,4 @@ jobs:
           restore-keys: ${{ runner.os }}-cache-typescript-tsbuildinfo-
 
       - name: Run TypeScript type check
-        run: yarn typecheck
+        run: pnpm typecheck
