--- a/tooling/github-actions/install/action.yml
+++ b/tooling/github-actions/install/action.yml
@@ -2,7 +2,7 @@ name: "Install"
 description: "Sets up Node.js and runs install"
 
 runs:
-  using: composite
+  using: ubuntu-latest
   steps:
     - uses: actions/setup-node@v3
       with:
