specify to run the install script on bash

--- a/tooling/github-actions/install/action.yml
+++ b/tooling/github-actions/install/action.yml
@@ -40,4 +40,5 @@ runs:
         restore-keys: ${{ runner.os }}-cache-typescript-tsbuildinfo-
 
     - name: Install dependencies
+      shell: bash
       run: pnpm install
