--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,2 @@
-DATABASE_URL=
-NEXTAUTH_SECRET=
-GITHUB_CLIENT_ID=
-GITHUB_SECRET=
+NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
