update example .env

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
+# private
+DATABASE_URL=
+
+# public
 NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
