--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
     "drizzle:migration:gen": "drizzle-kit generate:pg",
     "drizzle:migration:run": "ts-node -r dotenv/config -r tsconfig-paths/register src/db/migrate.ts",
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3",
+    "@next/bundle-analyzer": "^13.5.5",
     "@types/node": "^20.6.3",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
